added back changes

--- a/www/css/my-app.css
+++ b/www/css/my-app.css
@@ -29,3 +29,12 @@
 .cart-notification .item-content .item-inner .item-after a{
     color:#FFFFFF;
 }
+
+.qr-notification .item-content{
+    color:#FFFFFF;
+    background-color: #041D43;
+}
+
+.qr-notification .item-content .item-inner .item-after a{
+    color:#FFFFFF;
+}
